guestbook/guestbook-ui-route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: guestbook-ui
spec:
  host: guestbook-ui-workshop-gitops.apps-crc.testing
  port:
    targetPort: 8080
  to:
    kind: Service
    name: guestbook-ui
    weight: 100
  wildcardPolicy: None
